--- a/roles/nftables/molecule/default/verify.yml
+++ b/roles/nftables/molecule/default/verify.yml
@@ -15,26 +15,26 @@
 
     - name: Get nftables ruleset
       ansible.builtin.command: nft list ruleset
-      register: nft_ruleset
+      register: nftables_nft_ruleset
       changed_when: false
 
     - name: Assert nat tables exist
       ansible.builtin.assert:
         that:
-          - "'table ip nat' in nft_ruleset.stdout"
-          - "'table ip6 nat' in nft_ruleset.stdout"
-          - "'oifname \"eth0\" masquerade' in nft_ruleset.stdout"
-          - "'ip saddr 192.168.2.0/24 snat to 192.168.1.100' in nft_ruleset.stdout"
-          - "'ip6 daddr 2001:db8::1 dnat to 2001:db8::100' in nft_ruleset.stdout"
+          - "'table ip nat' in nftables_nft_ruleset.stdout"
+          - "'table ip6 nat' in nftables_nft_ruleset.stdout"
+          - "'oifname \"eth0\" masquerade' in nftables_nft_ruleset.stdout"
+          - "'ip saddr 192.168.2.0/24 snat to 192.168.1.100' in nftables_nft_ruleset.stdout"
+          - "'ip6 daddr 2001:db8::1 dnat to 2001:db8::100' in nftables_nft_ruleset.stdout"
 
     - name: Check config file permissions
       ansible.builtin.stat:
         path: /etc/nftables.conf
-      register: nft_conf
+      register: nftables_nft_conf
 
     - name: Assert config file permissions
       ansible.builtin.assert:
         that:
-          - "nft_conf.stat.mode == '0633'"
-          - "nft_conf.stat.pw_name == 'root'"
-          - "nft_conf.stat.gr_name == 'root'"
+          - "nftables_nft_conf.stat.mode == '0633'"
+          - "nftables_nft_conf.stat.pw_name == 'root'"
+          - "nftables_nft_conf.stat.gr_name == 'root'"
